--- a/Clean-TEB.ipynb
+++ b/Clean-TEB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -429,7 +429,7 @@
        "[2056 rows x 19 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -471,7 +471,7 @@
        "Name: eyes_color, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,14 +488,14 @@
     "                       .apply(lambda eye_color: '4' if re.search('VERD', eye_color) else eye_color)\n",
     "                       .apply(lambda eye_color: '5' if re.search('AZU', eye_color) else eye_color)\n",
     "                       .apply(lambda eye_color: '6' if re.search('GRI', eye_color) else eye_color)\n",
-    "                       .apply(lambda eye_color: '-1' if re.search('[A-Z]', eye_color) else eye_color)\n",
+    "                       .apply(lambda eye_color: '-1' if re.search('NAN|[A-Z]', eye_color) else eye_color)\n",
     ")\n",
     "auxDf['eyes_color'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -513,7 +513,7 @@
        "Name: hair_color, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,14 +529,14 @@
     "                       .apply(lambda hair_color: '3' if re.search('ROJ', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '4' if re.search('AZU', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '5' if re.search('GRI', hair_color) else hair_color)\n",
-    "                       .apply(lambda hair_color: '-1' if re.search('[A-Z]', hair_color) else hair_color)\n",
+    "                       .apply(lambda hair_color: '-1' if re.search('NAN|[A-Z]', hair_color) else hair_color)\n",
     ")\n",
     "auxDf['hair_color'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -544,13 +544,13 @@
     {
      "data": {
       "text/plain": [
-       "0      1414\n",
-       "1       626\n",
-       "NAN      16\n",
+       "0     1414\n",
+       "1      626\n",
+       "-1      16\n",
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,13 +562,14 @@
     "                       .apply(lambda gender: gender.upper())\n",
     "                       .apply(lambda gender: '0' if re.search('FEMENINO', gender) else gender)\n",
     "                       .apply(lambda gender: '1' if re.search('MASCULINO', gender) else gender)\n",
+    "                       .apply(lambda gender: '-1' if re.search('NAN|[A-Z]', gender) else gender)\n",
     ")\n",
     "auxDf['gender'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -583,7 +584,7 @@
        "Name: mouth_size, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,76 +597,27 @@
     "                           .apply(lambda ms: '0' if re.search('GRAND|GRUES|AMPL|ALARG|ANCH|CARN', ms) else ms)\n",
     "                           .apply(lambda ms: '1' if re.search('MED|NORMAL|REGU', ms) else ms)\n",
     "                           .apply(lambda ms: '2' if re.search('PEQUE|CHIC|DELG|FIN', ms) else ms)\n",
-    "                           .apply(lambda ms: '-1' if re.search('[A-Z]', ms) else ms)\n",
+    "                           .apply(lambda ms: '-1' if re.search('NAN|[A-Z]', ms) else ms)\n",
     "                      )\n",
     "auxDf['mouth_size'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                    1027\n",
-       "NORMAL                167\n",
-       "7                     131\n",
-       "NAN                   101\n",
-       "PEQUEÑA                81\n",
-       "5                      79\n",
-       "ANGULAR                72\n",
-       "MOTOSA                 52\n",
-       "RESPINGADA             42\n",
-       "CONVEXA                37\n",
-       "CÓNCAVA                27\n",
-       "MEDIANA                26\n",
-       "PERFILADA              24\n",
-       "ÑATA                   23\n",
-       "DELGADA                23\n",
-       "CONVEXO                15\n",
-       "CHATA                  14\n",
-       "GRUESA                 14\n",
-       "SINUOSA                13\n",
-       "FINA                   10\n",
-       "GRANDE                  9\n",
-       "CORTA                   8\n",
-       "LARGA                   7\n",
-       "CONCAVO                 5\n",
-       "ACHATADA                4\n",
-       "SEMI GRUESA             3\n",
-       "ALARGADA                3\n",
-       "ANGOSTA                 3\n",
-       "UNDEFINED               3\n",
-       "REGULAR                 3\n",
-       "CHICA                   3\n",
-       "REDONDA                 2\n",
-       "ROMANA                  2\n",
-       "AFINADA                 2\n",
-       "AÑATADA                 2\n",
-       "SINUOSO                 2\n",
-       "DERECHA                 1\n",
-       "MDIANA                  1\n",
-       "PUNTIAGUDA              1\n",
-       "ÑATO                    1\n",
-       "NORMALES                1\n",
-       "MEDIANA NORMAL          1\n",
-       "OVALADA                 1\n",
-       "REFINADA                1\n",
-       "PEQUEÑO                 1\n",
-       "BULBOSA                 1\n",
-       "GRUESA LARGA            1\n",
-       "CHICA (ÑATA)            1\n",
-       "ALTA                    1\n",
-       "MOTO                    1\n",
-       "SEMI PERFILADA          1\n",
-       "PEQUEÑA LARGA           1\n",
-       "DESVIACIÓN MINIMA       1\n",
+       "1     1447\n",
+       "2      280\n",
+       "0      228\n",
+       "-1     101\n",
        "Name: nose, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,15 +627,49 @@
     "                     .apply(lambda row: row['nose'], axis=1)\n",
     "                     .apply(lambda nose: str(nose))\n",
     "                     .apply(lambda nose: nose.upper())\n",
-    "                     .apply(lambda nose: '0' if re.search('RECT', nose) else nose)\n",
-    "                     .apply(lambda nose: '5' if re.search('ANCH|AMPL', nose) else nose)\n",
-    "                     .apply(lambda nose: '7' if re.search('AGUIL|AGUL', nose) else nose)\n",
-    "                     #.apply(lambda nose: '1' if re.search('RESP', nose) else nose)\n",
-    "                     #.apply(lambda nose: '0' if re.search('GRAND|GRUES|AMPL|ALARG|ANCH|AGUIL|AGUL', nose) else nose)\n",
-    "                     #.apply(lambda nose: '1' if re.search('MED|NORMAL|REG|MD', nose) else nose)\n",
-    "                     #.apply(lambda nose: '2' if re.search('PEQUE|CHIC|FIN|ÑAT|CHAT|CORT', nose) else nose)\n",
+    "                     .apply(lambda nose: '0' if re.search('AGUIL|AGUL|ALARG|GRAND|GRUES|LARG|MOTO|ROMAN', nose) else nose)\n",
+    "                     .apply(lambda nose: '1' if re.search('ALT|ANGOST|ANGUL|BULBOS|NCAV|CONVEX|DERE|DESV|MED|MD|NORMAL|RECT|REDOND|REG|RESPINGA|SINUOS|PUNTI', nose) else nose)\n",
+    "                     .apply(lambda nose: '2' if re.search('AMPL|ANCH|CHAT|CHIC|CORT|FIN|ÑAT|OVAL|PEQUE|PERFIL|DELGA|ANGOST', nose) else nose)\n",
+    "                     .apply(lambda nose: '-1' if re.search('NAN|[A-Z]', nose) else nose)\n",
     "                )\n",
     "auxDf['nose'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1245\n",
+       "-1     362\n",
+       "2      233\n",
+       "1      212\n",
+       "3        4\n",
+       "Name: race, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auxDf['race'] = (auxDf\n",
+    "                     .apply(lambda row: row['race'], axis=1)\n",
+    "                     .apply(lambda race: str(race))\n",
+    "                     .apply(lambda race: race.upper())\n",
+    "                     .apply(lambda race: '0' if re.search('MES|MEZ|ORIGIN', race) else race)\n",
+    "                     .apply(lambda race: '1' if re.search('BLANC|CAUCA|CLAR', race) else race)\n",
+    "                     .apply(lambda race: '2' if re.search('AMARILL|CANEL|TRIG|MORE|COBR', race) else race)\n",
+    "                     .apply(lambda race: '3' if re.search('NEGR', race) else race)\n",
+    "                     .apply(lambda race: '-1' if re.search('NAN|[A-Z]', race) else race)\n",
+    "                )\n",
+    "auxDf['race'].value_counts()"
    ]
   }
  ],
