--- a/Clean-TEB.ipynb
+++ b/Clean-TEB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -429,7 +429,7 @@
        "[2056 rows x 19 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -471,7 +471,7 @@
        "Name: eyes_color, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -503,17 +503,17 @@
     {
      "data": {
       "text/plain": [
-       "0     1455\n",
-       "-1     319\n",
-       "1      260\n",
+       "0     1460\n",
+       "-1     310\n",
+       "1      263\n",
        "2       16\n",
        "3        3\n",
-       "5        2\n",
+       "5        3\n",
        "4        1\n",
        "Name: hair_color, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,11 +524,12 @@
     "                       .apply(lambda hair_color: str(hair_color))\n",
     "                       .apply(lambda hair_color: hair_color.upper())\n",
     "                       .apply(lambda hair_color: '0' if re.search('NEGR|NGR', hair_color) else hair_color)\n",
-    "                       .apply(lambda hair_color: '1' if re.search('MARR|CASTAÑO|PARD', hair_color) else hair_color)\n",
+    "                       .apply(lambda hair_color: '1' if re.search('MARR|CASTAÑO|PARD|CARTAÑO|CAST', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '2' if re.search('RUBI', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '3' if re.search('ROJ', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '4' if re.search('AZU', hair_color) else hair_color)\n",
-    "                       .apply(lambda hair_color: '5' if re.search('GRI', hair_color) else hair_color)\n",
+    "                       .apply(lambda hair_color: '5' if re.search('GRI|CANO|CAN', hair_color) else hair_color)\n",
+    "                       .apply(lambda hair_color: '0' if re.search('OSC', hair_color) else hair_color)\n",
     "                       .apply(lambda hair_color: '-1' if re.search('NAN|[A-Z]', hair_color) else hair_color)\n",
     ")\n",
     "auxDf['hair_color'].value_counts()"
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +551,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -584,7 +585,7 @@
        "Name: mouth_size, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
        "Name: nose, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -653,7 +654,7 @@
        "Name: race, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
